Fixed some typos and changed riot tags.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<li><a href="#theme__background-image">background-image</a></li>
 						<li><a href="#theme__border-image">border-image</a></li>
 						<li><a href="#theme__opacity">opacity</a></li>
-						<!--<li><a href="#theme__transition">transition</a></li>-->
+						<li><a href="#theme__transition">transition</a></li>
 					</ul>
 				</li>
 		</ul>
@@ -1035,101 +1035,101 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">order</h3> </header>
 				<div class="d:f fd:c fd:r@M ai:c fw:w mb>*:.5r mr>*:1r">
-					<div class="o:4 ">
-						<div class="d:ib p:1r bgc:b c:w ">4</div> <code>o:4</code></div>
-					<div class="o:3 ">
-						<div class="d:ib p:1r bgc:b c:w ">3</div> <code>o:3</code></div>
-					<div class="o:2 ">
-						<div class="d:ib p:1r bgc:b c:w ">2</div> <code>o:2</code></div>
-					<div class="o:1 ">
-						<div class="d:ib p:1r bgc:b c:w ">1</div> <code>o:1</code></div>
-					<div class="o:-1 ">
-						<div class="d:ib p:1r bgc:b c:w ">-1</div> <code>o:-1</code></div>
-					<div class="o:-2 ">
-						<div class="d:ib p:1r bgc:b c:w ">-2</div> <code>o:-2</code></div>
-					<div class="o:-3 ">
-						<div class="d:ib p:1r bgc:b c:w ">-3</div> <code>o:-3</code></div>
-					<div class="o:-4 ">
-						<div class="d:ib p:1r bgc:b c:w ">-4</div> <code>o:-4</code></div>
+					<div class="o:4">
+						<div class="d:ib p:1r bgc:b c:w">4</div> <code>o:4</code></div>
+					<div class="o:3">
+						<div class="d:ib p:1r bgc:b c:w">3</div> <code>o:3</code></div>
+					<div class="o:2">
+						<div class="d:ib p:1r bgc:b c:w">2</div> <code>o:2</code></div>
+					<div class="o:1">
+						<div class="d:ib p:1r bgc:b c:w">1</div> <code>o:1</code></div>
+					<div class="o:-1">
+						<div class="d:ib p:1r bgc:b c:w">-1</div> <code>o:-1</code></div>
+					<div class="o:-2">
+						<div class="d:ib p:1r bgc:b c:w">-2</div> <code>o:-2</code></div>
+					<div class="o:-3">
+						<div class="d:ib p:1r bgc:b c:w">-3</div> <code>o:-3</code></div>
+					<div class="o:-4">
+						<div class="d:ib p:1r bgc:b c:w">-4</div> <code>o:-4</code></div>
 				</div>
 			</article>
 		</section>
-		<section id="theme ">
+		<section id="theme">
 			<header>
-				<h2 class="pl:2r fs:4r@L fw:100@L mt:4r ">Theming</h2> </header>
-			<article id="theme__border-width ">
-				<header class="p:r ">
-					<h3 class="d:ib ff:m bgc:b c:w p:1r ">border-width</h3>
+				<h2 class="pl:2r fs:4r@L fw:100@L mt:4r">Theming</h2> </header>
+			<article id="theme__border-width">
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">border-width</h3>
 					<responsivestyles></responsivestyles>
 				</header>
-				<h4 class="mt:1r "><code>border-width</code></h4>
-				<div class="bw:thick p:.5r d:ib@M mr:1r mb:.5r ">thick <code>bw:thick</code></div>
-				<div class="bw:medium p:.5r d:ib@M mr:1r mb:.5r ">medium <code>bw:medium</code></div>
-				<div class="bw:thin p:.5r d:ib@M mr:1r mb:2r ">thin <code>bw:thin</code></div>
-				<h4 class="mt:1r "><code>border-top:width</code></h4>
-				<div class="btw:thick py:.5r d:ib@M mr:1r mb:.5r ">thick <code>btw:thick</code></div>
-				<div class="btw:medium py:.5r d:ib@M mr:1r mb:.5r ">medium <code>btw:medium</code></div>
-				<div class="btw:thin py:.5r d:ib@M mr:1r mb:2r ">thin <code>btw:thin</code></div>
-				<h4 class="mt:1r "><code>border-right-width</code></h4>
-				<div class="brw:thick py:.5r pr:.5r d:ib@M mr:1r mb:.5r ">thick <code>brw:thick</code></div>
-				<div class="brw:medium py:.5r pr:.5r d:ib@M mr:1r mb:.5r ">medium <code>brw:medium</code></div>
-				<div class="brw:thin py:.5r pr:.5r d:ib@M mr:1r mb:2r ">thin <code>brw:thin</code></div>
-				<h4 class="mt:1r "><code>border-bottom:width</code></h4>
-				<div class="bbw:thick py:.5r d:ib@M mr:1r mb:.5r ">thick <code>bbw:thick</code></div>
-				<div class="bbw:medium py:.5r d:ib@M mr:1r mb:.5r ">medium <code>bbw:medium</code></div>
-				<div class="bbw:thin py:.5r d:ib@M mr:1r mb:2r ">thin <code>bbw:thin</code></div>
-				<h4 class="mt:1r "><code>border-left-width</code></h4>
-				<div class="blw:thick py:.5r pl:.5r d:ib@M mr:1r mb:.5r ">thick <code>blw:thick</code></div>
-				<div class="blw:medium py:.5r pl:.5r d:ib@M mr:1r mb:.5r ">medium <code>blw:medium</code></div>
-				<div class="blw:thin py:.5r pl:.5r d:ib@M mr:1r ">thin <code>blw:thin</code></div>
-				<h4 class="mt:1r "><code>border-left-width</code> + <code>border-right-width</code> (x-axis)</h4>
-				<div class="bxw:thick p:.5r d:ib@M mr:1r mb:.5r ">thick <code>bxw:thick</code></div>
-				<div class="bxw:medium p:.5r d:ib@M mr:1r mb:.5r ">medium <code>bxw:medium</code></div>
-				<div class="bxw:thin p:.5r px:.5r d:ib@M mr:1r mb:2r ">thin <code>bxw:thin</code></div>
-				<h4 class="mt:1r "><code>border-top:width</code> + <code>border-bottom:width</code> (y-axis)</h4>
-				<div class="byw:thick py:.5r d:ib@M mr:1r mb:.5r ">thick <code>byw:thick</code></div>
-				<div class="byw:medium py:.5r d:ib@M mr:1r mb:.5r ">medium <code>byw:medium</code></div>
-				<div class="byw:thin py:.5r d:ib@M mr:1r mb:2r ">thin <code>byw:thin</code></div>
+				<h4 class="mt:1r"><code>border-width</code></h4>
+				<div class="bw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bw:thick</code></div>
+				<div class="bw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bw:medium</code></div>
+				<div class="bw:thin p:.5r d:ib@M mr:1r mb:2r">thin <code>bw:thin</code></div>
+				<h4 class="mt:1r"><code>border-top:width</code></h4>
+				<div class="btw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>btw:thick</code></div>
+				<div class="btw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>btw:medium</code></div>
+				<div class="btw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>btw:thin</code></div>
+				<h4 class="mt:1r"><code>border-right-width</code></h4>
+				<div class="brw:thick py:.5r pr:.5r d:ib@M mr:1r mb:.5r">thick <code>brw:thick</code></div>
+				<div class="brw:medium py:.5r pr:.5r d:ib@M mr:1r mb:.5r">medium <code>brw:medium</code></div>
+				<div class="brw:thin py:.5r pr:.5r d:ib@M mr:1r mb:2r">thin <code>brw:thin</code></div>
+				<h4 class="mt:1r"><code>border-bottom:width</code></h4>
+				<div class="bbw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>bbw:thick</code></div>
+				<div class="bbw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>bbw:medium</code></div>
+				<div class="bbw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>bbw:thin</code></div>
+				<h4 class="mt:1r"><code>border-left-width</code></h4>
+				<div class="blw:thick py:.5r pl:.5r d:ib@M mr:1r mb:.5r">thick <code>blw:thick</code></div>
+				<div class="blw:medium py:.5r pl:.5r d:ib@M mr:1r mb:.5r">medium <code>blw:medium</code></div>
+				<div class="blw:thin py:.5r pl:.5r d:ib@M mr:1r">thin <code>blw:thin</code></div>
+				<h4 class="mt:1r"><code>border-left-width</code> + <code>border-right-width</code> (x-axis)</h4>
+				<div class="bxw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bxw:thick</code></div>
+				<div class="bxw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bxw:medium</code></div>
+				<div class="bxw:thin p:.5r px:.5r d:ib@M mr:1r mb:2r">thin <code>bxw:thin</code></div>
+				<h4 class="mt:1r"><code>border-top:width</code> + <code>border-bottom:width</code> (y-axis)</h4>
+				<div class="byw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>byw:thick</code></div>
+				<div class="byw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>byw:medium</code></div>
+				<div class="byw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>byw:thin</code></div>
 			</article>
-			<article id="theme__border-style ">
+			<article id="theme__border-style">
 				<header>
-					<h3 class="d:ib ff:m bgc:b c:w p:1r ">border-style</h3> </header>
-				<div class="p:2r bw:medium bs:n bgc:b.05 d:ib ">none</div> <code>bs:n</code> <br>
-				<div class="p:2r bw:medium bs:s d:ib ">solid</div> <code>bs:s</code> <br>
-				<div class="p:2r bw:medium bs:d d:ib ">dotted</div> <code>bs:d</code> </article>
-			<article id="theme__border-radius ">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">border-style</h3> </header>
+				<div class="p:2r bw:medium bs:n bgc:b.05 d:ib">none</div> <code>bs:n</code> <br>
+				<div class="p:2r bw:medium bs:s d:ib">solid</div> <code>bs:s</code> <br>
+				<div class="p:2r bw:medium bs:d d:ib">dotted</div> <code>bs:d</code> </article>
+			<article id="theme__border-radius">
 				<header>
-					<h3 class="d:ib ff:m bgc:b c:w p:1r ">border-radius</h3> </header>
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">border-radius</h3> </header>
 				<section>
 					<h4>border-radius</h4>
-					<div class="br:.25r p:.5r c:w bgc:b d:ib ">.25rem <code>br:.25r</code> </div>
-					<div class="br:.5r p:.5r c:w bgc:b d:ib ">.5rem <code>br:.5r</code> </div>
-					<div class="br:1r p:.5r c:w bgc:b d:ib ">1rem <code>br:1r</code> </div>
-					<div class="br:2r p:.5r c:w bgc:b d:ib ">2rem <code>br:2r</code> </div>
-					<div class="br:100% mt:1r p:.5r c:w bgc:b d:ib h:8r w:8r d:f fd:c ai:c jc:c ">100% <code>br:100%</code> </div>
+					<div class="br:.25r p:.5r c:w bgc:b d:ib">.25rem <code>br:.25r</code> </div>
+					<div class="br:.5r p:.5r c:w bgc:b d:ib">.5rem <code>br:.5r</code> </div>
+					<div class="br:1r p:.5r c:w bgc:b d:ib">1rem <code>br:1r</code> </div>
+					<div class="br:2r p:.5r c:w bgc:b d:ib">2rem <code>br:2r</code> </div>
+					<div class="br:100% mt:1r p:.5r c:w bgc:b d:ib h:8r w:8r d:f fd:c ai:c jc:c">100% <code>br:100%</code> </div>
 				</section>
 				<hr>
 				<section>
 					<h4>border-bottom-right-radius, border-bottom-left-radius, <br>border-top-right-radius, border-top-left-radius</h4>
 					<div>
-						<div class="br:1r bbrr:0 p:.5r c:w bgc:b d:ib "> 0 <code>bbrr:0</code> </div>
-						<div class="br:1r bblr:0 p:.5r c:w bgc:b d:ib mb:.25r "> 0 <code>bblr:0</code> </div> <br>
-						<div class="br:1r btrr:0 p:.5r c:w bgc:b d:ib "> 0 <code>btrr:0</code> </div>
-						<div class="br:1r btlr:0 p:.5r c:w bgc:b d:ib "> 0 <code>btlr:0</code> </div>
+						<div class="br:1r bbrr:0 p:.5r c:w bgc:b d:ib"> 0 <code>bbrr:0</code> </div>
+						<div class="br:1r bblr:0 p:.5r c:w bgc:b d:ib mb:.25r"> 0 <code>bblr:0</code> </div> <br>
+						<div class="br:1r btrr:0 p:.5r c:w bgc:b d:ib"> 0 <code>btrr:0</code> </div>
+						<div class="br:1r btlr:0 p:.5r c:w bgc:b d:ib"> 0 <code>btlr:0</code> </div>
 					</div>
 				</section>
 				<hr>
 				<section>
 					<h4>border-top-right-radius + border-bottom-right-radius (right), <br>border-top-left-radius + border-bottom-left-radius (left)</h4>
 					<div>
-						<div class="br:1r brr:0 p:.5r c:w bgc:b d:ib "> 0 <code>brr:0</code> </div>
-						<div class="br:1r blr:0 p:.5r c:w bgc:b d:ib "> 0 <code>blr:0</code> </div>
+						<div class="br:1r brr:0 p:.5r c:w bgc:b d:ib"> 0 <code>brr:0</code> </div>
+						<div class="br:1r blr:0 p:.5r c:w bgc:b d:ib"> 0 <code>blr:0</code> </div>
 					</div>
 				</section>
 			</article>
-			<article id="theme__box-shadow ">
-				<header class="p:r ">
-					<h3 class="d:ib ff:m bgc:b c:w p:1r ">box-shadow</h3>
+			<article id="theme__box-shadow">
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">box-shadow</h3>
 					<hoverstyles></hoverstyles>
 				</header>
 				<p>Including <b>hover classes</b>: <code>bs:.25r:h</code> <br>Hover over the circles for a demo.</p>
@@ -1316,7 +1316,7 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">background-image</h3> </header>
 				<!-- color gradients -->
-				<div class="d:f@M fw:w fw:b c:w " style="margin-left: -.25rem; margin-right: -.25rem;">
+				<div class="d:f@M fw:w fw:b c:w" style="margin-left: -.25rem; margin-right: -.25rem;">
 					<div class="p:1r bgi:red bw:medium fb:20% ta:c bc:t"> red <br> <code>bgi:red</code> </div>
 					<div class="p:1r bgi:orange bw:medium fb:20% ta:c bc:t"> orange <br> <code>bgi:orange</code> </div>
 					<div class="p:1r bgi:yellow bw:medium fb:20% ta:c bc:t"> yellow <br> <code>bgi:yellow</code> </div>
@@ -1358,17 +1358,27 @@
 					<hoverstyles></hoverstyles>
 				</header>
 				<div class="ta:c">
-					<div><span class="o:i o:0:h t:medium p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">initial</span> <code>o:i</code></div>
-					<div><span class="o:.9 o:.1:h t:medium p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">.9</span> <code>o:.9</code></div>
-					<div><span class="o:.8 o:.2:h t:medium p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.8</span> <code>o:.8</code></div>
-					<div><span class="o:.7 o:.3:h t:medium p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.7</span> <code>o:.7</code></div>
-					<div><span class="o:.6 o:.4:h t:medium p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.6</span> <code>o:.6</code></div>
-					<div><span class="o:.5 o:.1:h t:medium p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.5</span> <code>o:.5</code></div>
-					<div><span class="o:.4 o:.6:h t:medium p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.4</span> <code>o:.4</code></div>
-					<div><span class="o:.3 o:.7:h t:medium p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.3</span> <code>o:.3</code></div>
-					<div><span class="o:.2 o:.8:h t:medium p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.2</span> <code>o:.2</code></div>
-					<div><span class="o:.1 o:.9:h t:medium p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.1</span> <code>o:.1</code></div>
+					<div><span class="o:i o:0:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">initial</span> <code>o:i</code></div>
+					<div><span class="o:.9 o:.1:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">.9</span> <code>o:.9</code></div>
+					<div><span class="o:.8 o:.2:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.8</span> <code>o:.8</code></div>
+					<div><span class="o:.7 o:.3:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.7</span> <code>o:.7</code></div>
+					<div><span class="o:.6 o:.4:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.6</span> <code>o:.6</code></div>
+					<div><span class="o:.5 o:.1:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.5</span> <code>o:.5</code></div>
+					<div><span class="o:.4 o:.6:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.4</span> <code>o:.4</code></div>
+					<div><span class="o:.3 o:.7:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.3</span> <code>o:.3</code></div>
+					<div><span class="o:.2 o:.8:h p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.2</span> <code>o:.2</code></div>
+					<div><span class="o:.1 o:.9:h p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b c:w fs:1.5r">.1</span> <code>o:.1</code></div>
 					<div><span class="o:0 o:i:h t:medium p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgi:red c:w fs:1.5r">0</span> <code>o:0</code></div>
+				</div>
+			</article>
+			<article id="theme__transition">
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">transition</h3> </header>
+				<p>Hover over the circles to trigger the transitions.</p>
+				<div class="d:f jc:c fw:w mr>*:1r">
+					<div class="t:slow o:.4 o:i:h bs:.0625r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">slow <code>t:slow</code> </div>
+					<div class="t:medium o:.4 o:i:h bs:.0625r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">medium <code>t:medium</code> </div>
+					<div class="t:fast o:.4 o:i:h bs:.0625r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">fast <code>t:fast</code> </div>
 				</div>
 			</article>
 		</section>
