Fixed typo and updated demo (z-index, colors).

--- a/index.html
+++ b/index.html
@@ -570,15 +570,14 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">z-index</h3> </header>
 				<div class="ta:c">
-					<div><span class="zi:9 p:r r:1r py:.5r px:2r bw:thin bgc:b.9 c:w w:4r fs:1.5r">9</span> <code>zi:9</code></div>
-					<div><span class="zi:8 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.8 c:w fs:1.5r">8</span> <code>zi:8</code></div>
-					<div><span class="zi:7 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.7 c:w fs:1.5r">7</span> <code>zi:7</code></div>
-					<div><span class="zi:6 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.6 c:w fs:1.5r">6</span> <code>zi:6</code></div>
-					<div><span class="zi:5 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.5 c:w fs:1.5r">5</span> <code>zi:5</code></div>
-					<div><span class="zi:4 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.4 c:w fs:1.5r">4</span> <code>zi:4</code></div>
-					<div><span class="zi:3 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.3 c:w fs:1.5r">3</span> <code>zi:3</code></div>
-					<div><span class="zi:2 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.2 c:w fs:1.5r">2</span> <code>zi:2</code></div>
-					<div><span class="zi:1 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.1 c:w fs:1.5r">1</span> <code>zi:1</code></div>
+					<div><span class="zi:40 p:r r:1r py:.5r px:2r bw:thin bgc:b.9 c:w w:4r fs:1.5r">40</span> <code>zi:40</code></div>
+					<div><span class="zi:30 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.8 c:w fs:1.5r">30</span> <code>zi:30</code></div>
+					<div><span class="zi:20 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.7 c:w fs:1.5r">20</span> <code>zi:20</code></div>
+					<div><span class="zi:10 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.6 c:w fs:1.5r">10</span> <code>zi:10</code></div>
+					<div><span class="zi:-10 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.5 c:w fs:1.5r">-10</span> <code>zi:-10</code></div>
+					<div><span class="zi:-20 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.4 c:w fs:1.5r">-20</span> <code>zi:-20</code></div>
+					<div><span class="zi:-30 p:r r:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.3 c:w fs:1.5r">-30</span> <code>zi:-30</code></div>
+					<div><span class="zi:-40 p:r l:1r mt:-.5r py:.5r px:2r bw:thin bgc:b.2 c:w fs:1.5r">-40</span> <code>zi:-40</code></div>
 				</div>
 			</article>
 			<article id="layout__top">
@@ -1157,8 +1156,9 @@
 					<div class="p:1r c:blue bw:thick fb:20% ta:c"> blue <br> <code>c:blue</code> </div>
 					<div class="p:1r c:indigo bw:thick fb:20% ta:c"> indigo <br> <code>c:indigo</code> </div>
 					<div class="p:1r c:purple bw:thick fb:20% ta:c"> purple <br> <code>c:purple</code> </div>
-					<div class="p:1r c:rose bw:thick fb:20% ta:c"> rose <br> <code>c:rose</code> </div>
-					<div class="p:1r c:pink bw:thick fb:20% ta:c"> pink <br> <code>c:pink</code> </div>
+					<div class="p:1r c:violet bw:thick fb:20% ta:c"> violet <br> <code>c:violet</code> </div>
+					<div class="p:1r c:magenta bw:thick fb:20% ta:c"> magenta <br> <code>c:magenta</code> </div>
+					<div class="p:1r c:brown bw:thick fb:20% ta:c"> brown <br> <code>c:brown</code> </div>
 				</div>
 				<!-- shades of black -->
 				<div class="d:f@M fw:w fw:b c:w">
@@ -1172,8 +1172,6 @@
 					<div class="p:1r c:b.3 bw:thick fb:20% ta:c"> black .3 <br> <code>c:b.3</code> </div>
 					<div class="p:1r c:b.2 bw:thick fb:20% ta:c"> black .2 <br> <code>c:b.2</code> </div>
 					<div class="p:1r c:b.1 bw:thick fb:20% ta:c"> black .1 <br> <code>c:b.1</code> </div>
-					<div class="p:1r c:b.05 bw:thick fb:20% ta:c"> black .05 <br> <code>c:b.05</code> </div>
-					<div class="p:1r c:b.025 bw:thick fb:20% ta:c"> black .025 <br> <code>c:b.025</code> </div>
 				</div>
 				<!-- shades of white -->
 				<div class="d:f@M fw:w fw:b c:b bgc:b">
@@ -1206,8 +1204,8 @@
 					<div class="p:1r bgc:blue bw:medium fb:20% ta:c"> blue <br> <code>bgc:blue</code> </div>
 					<div class="p:1r bgc:indigo bw:medium fb:20% ta:c"> indigo <br> <code>bgc:indigo</code> </div>
 					<div class="p:1r bgc:purple bw:medium fb:20% ta:c"> purple <br> <code>bgc:purple</code> </div>
-					<div class="p:1r bgc:rose bw:medium fb:20% ta:c"> rose <br> <code>bgc:rose</code> </div>
-					<div class="p:1r bgc:pink bw:medium fb:20% ta:c"> pink <br> <code>bgc:pink</code> </div>
+					<div class="p:1r bgc:violet bw:medium fb:20% ta:c"> violet <br> <code>bgc:violet</code> </div>
+					<div class="p:1r bgc:magenta bw:medium fb:20% ta:c"> magenta <br> <code>bgc:magenta</code> </div>
 					<div class="p:1r bgc:brown bw:medium fb:20% ta:c"> brown <br> <code>bgc:brown</code> </div>
 				</div>
 				<!-- shades of black -->
@@ -1239,8 +1237,8 @@
 					<div class="p:1r bgc:w.1 bw:medium fb:20% ta:c bc:w"> white .1 <br> <code>bgc:w.1</code> </div>
 				</div> <small>The white shades are placed on a black background in order to show the blending effect.</small>
 				<!-- overlay demo -->
-				<h4 class="mt:2r">Creating tints with a little parent/child nesting trick</h4>
-				<p>For example: <code>bgc:blue + bgc:w.9</code></p>
+				<h4 class="mt:2r">It is possible to create tints with a little parent/child nesting trick.</h4>
+				<p>For example by adding <code>bgc:blue</code> to the parent element and <code>bgc:w.9</code> to the child.</p>
 				<div class="bgc:blue d:f@L">
 					<div class="p:1r bgc:w.9"></div>
 					<div class="p:1r bgc:w.8"></div>
@@ -1279,8 +1277,8 @@
 					<div class="p:1r bc:blue bw:thick fb:20% ta:c"> blue <br> <code>bc:blue</code> </div>
 					<div class="p:1r bc:indigo bw:thick fb:20% ta:c"> indigo <br> <code>bc:indigo</code> </div>
 					<div class="p:1r bc:purple bw:thick fb:20% ta:c"> purple <br> <code>bc:purple</code> </div>
-					<div class="p:1r bc:rose bw:thick fb:20% ta:c"> rose <br> <code>bc:rose</code> </div>
-					<div class="p:1r bc:pink bw:thick fb:20% ta:c"> pink <br> <code>bc:pink</code> </div>
+					<div class="p:1r bc:violet bw:thick fb:20% ta:c"> violet <br> <code>bc:violet</code> </div>
+					<div class="p:1r bc:magenta bw:thick fb:20% ta:c"> magenta <br> <code>bc:magenta</code> </div>
 					<div class="p:1r bc:brown bw:thick fb:20% ta:c"> brown <br> <code>bc:brown</code> </div>
 				</div>
 				<!-- shades of black -->
@@ -1295,8 +1293,6 @@
 					<div class="p:1r bc:b.3 bw:thick fb:20% ta:c"> black .3 <br> <code>bc:b.3</code> </div>
 					<div class="p:1r bc:b.2 bw:thick fb:20% ta:c"> black .2 <br> <code>bc:b.2</code> </div>
 					<div class="p:1r bc:b.1 bw:thick fb:20% ta:c"> black .1 <br> <code>bc:b.1</code> </div>
-					<div class="p:1r bc:b.05 bw:thick fb:20% ta:c"> black .05 <br> <code>bc:b.05</code> </div>
-					<div class="p:1r bc:b.025 bw:thick fb:20% ta:c"> black .025 <br> <code>bc:b.025</code> </div>
 				</div>
 				<!-- shades of white -->
 				<div class="d:f@M fw:w fw:b c:w bgc:b">
@@ -1327,10 +1323,39 @@
 					<div class="p:1r bgi:blue bw:medium fb:20% ta:c bc:t"> blue <br> <code>bgi:blue</code> </div>
 					<div class="p:1r bgi:indigo bw:medium fb:20% ta:c bc:t"> indigo <br> <code>bgi:indigo</code> </div>
 					<div class="p:1r bgi:purple bw:medium fb:20% ta:c bc:t"> purple <br> <code>bgi:purple</code> </div>
-					<div class="p:1r bgi:rose bw:medium fb:20% ta:c bc:t"> rose <br> <code>bgi:rose</code> </div>
-					<div class="p:1r bgi:pink bw:medium fb:20% ta:c bc:t"> pink <br> <code>bgi:pink</code> </div>
+					<div class="p:1r bgi:violet bw:medium fb:20% ta:c bc:t"> violet <br> <code>bgi:violet</code> </div>
+					<div class="p:1r bgi:magenta bw:medium fb:20% ta:c bc:t"> magenta <br> <code>bgi:magenta</code> </div>
 					<div class="p:1r bgi:brown bw:medium fb:20% ta:c bc:t"> brown <br> <code>bgi:brown</code> </div>
 				</div>
+				<p>The four black and white gradients are great for image overlays (to increase readabilty for text elements).
+					<div class="d:f@M fw:w fw:b c:w">
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
+							<div class="p:1r bgi:b.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .25<br> <code class="ml:.5r">bgi:b.25</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .5<br> <code class="ml:.5r">bgi:b.5</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:b.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .75<br> <code class="ml:.5r">bgi:b.75</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:b bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black<br> <code class="ml:.5r">bgi:b</code> </div>
+						</div>
+					</div>
+					<div class="d:f@M fw:w fw:b c:b">
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
+							<div class="p:1r bgi:w.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .25<br> <code class="ml:.5r">bgi:w.25</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:w.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .5<br> <code class="ml:.5r">bgi:w.5</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:w.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .75<br> <code class="ml:.5r">bgi:w.75</code> </div>
+						</div>
+						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25%">
+							<div class="p:1r bgi:w bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white<br> <code class="ml:.5r">bgi:w</code> </div>
+						</div>
+					</div>
 			</article>
 			<article id="theme__border-image">
 				<header>
@@ -1347,8 +1372,8 @@
 					<div class="p:1r bi:blue bw:thick fb:20% ta:c"> blue <br> <code>bi:blue</code> </div>
 					<div class="p:1r bi:indigo bw:thick fb:20% ta:c"> indigo <br> <code>bi:indigo</code> </div>
 					<div class="p:1r bi:purple bw:thick fb:20% ta:c"> purple <br> <code>bi:purple</code> </div>
-					<div class="p:1r bi:rose bw:thick fb:20% ta:c"> rose <br> <code>bi:rose</code> </div>
-					<div class="p:1r bi:pink bw:thick fb:20% ta:c"> pink <br> <code>bi:pink</code> </div>
+					<div class="p:1r bi:violet bw:thick fb:20% ta:c"> violet <br> <code>bi:violet</code> </div>
+					<div class="p:1r bi:magenta bw:thick fb:20% ta:c"> magenta <br> <code>bi:magenta</code> </div>
 					<div class="p:1r bi:brown bw:thick fb:20% ta:c"> brown <br> <code>bi:brown</code> </div>
 				</div>
 			</article>
