--- a/blank.html
+++ b/blank.html
@@ -168,7 +168,7 @@
 			<article id="text__hr">
 				<header>
 					<h3>Horizontal rules</h3>
-					<p>The hr element represents a paragrapx-level thematic break, e.g. a scene change in a story, or a transition to another topic within a section of a reference book.</p>
+					<p>The hr element represents a paragraph-level thematic break, e.g. a scene change in a story, or a transition to another topic within a section of a reference book.</p>
 				</header>
 				<div>
 					<hr> </div>
