Updated CDN links.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>blink | docs</title>
 	<link href="css/layout.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://gitcdn.link/repo/blinkui/blinkui/master/css/blink.min.css">
-	<!-- for local development: -->
+	<!-- development cdn -->
+	<link rel="stylesheet" href="https://rawgit.com/blinkui/blinkui/master/css/blink.min.css">
+	<!-- production cdn -->
+	<!--<link rel="stylesheet" href="https://gitcdn.link/repo/blinkui/blinkui/master/css/blink.min.css">-->
+	<!-- local development -->
 	<!--<link rel="stylesheet" href="../blinkui/css/blink.css">-->
 	<link rel="apple-touch-icon" href="blink.png">
 	<link rel="mask-icon" href="blink_icon.svg" color="#f53d5c">
