Fixed background-image demo.

--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
 					<div class="p:1r bgi:brown bw:medium fb:20% ta:c bc:t"> brown <br> <code>bgi:brown</code> </div>
 				</div>
 				<p>The four black and white gradients are great for image overlays (to increase readabilty for text elements).
-					<div class="d:f@M fw:w fw:b c:w">
+					<div class="d:f@L fw:w fw:b c:w">
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
 							<div class="p:1r bgi:b.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .25<br> <code class="ml:.5r">bgi:b.25</code> </div>
 						</div>
@@ -1345,7 +1345,7 @@
 							<div class="p:1r bgi:b bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black<br> <code class="ml:.5r">bgi:b</code> </div>
 						</div>
 					</div>
-					<div class="d:f@M fw:w fw:b c:b">
+					<div class="d:f@L fw:w fw:b c:b">
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
 							<div class="p:1r bgi:w.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .25<br> <code class="ml:.5r">bgi:w.25</code> </div>
 						</div>
