--- a/index.html
+++ b/index.html
@@ -1333,30 +1333,30 @@
 				<p>The four black and white gradients are great for image overlays (to increase readabilty for text elements).
 					<div class="d:f@L fw:w fw:b c:w">
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:b.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .25<br> <code class="ml:.5r">bgi:b.25</code> </div>
+							<div class="p:1r bgi:b.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .25<br> <code class="ml:a">bgi:b.25</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .5<br> <code class="ml:.5r">bgi:b.5</code> </div>
+							<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .5<br> <code class="ml:a">bgi:b.5</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:b.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .75<br> <code class="ml:.5r">bgi:b.75</code> </div>
+							<div class="p:1r bgi:b.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black .75<br> <code class="ml:a">bgi:b.75</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:b bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black<br> <code class="ml:.5r">bgi:b</code> </div>
+							<div class="p:1r bgi:b bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> black<br> <code class="ml:a">bgi:b</code> </div>
 						</div>
 					</div>
 					<div class="d:f@L fw:w fw:b c:b">
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:w.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .25<br> <code class="ml:.5r">bgi:w.25</code> </div>
+							<div class="p:1r bgi:w.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .25<br> <code class="ml:a">bgi:w.25</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:w.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .5<br> <code class="ml:.5r">bgi:w.5</code> </div>
+							<div class="p:1r bgi:w.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .5<br> <code class="ml:a">bgi:w.5</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:w.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .75<br> <code class="ml:.5r">bgi:w.75</code> </div>
+							<div class="p:1r bgi:w.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white .75<br> <code class="ml:a">bgi:w.75</code> </div>
 						</div>
 						<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:25vh">
-							<div class="p:1r bgi:w bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white<br> <code class="ml:.5r">bgi:w</code> </div>
+							<div class="p:1r bgi:w bw:thick ta:c bc:t w:100% h:100% d:f ai:fe"> white<br> <code class="ml:a">bgi:w</code> </div>
 						</div>
 					</div>
 			</article>
