--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
 				<div class="bw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bw:thick</code></div>
 				<div class="bw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bw:medium</code></div>
 				<div class="bw:thin p:.5r d:ib@M mr:1r mb:2r">thin <code>bw:thin</code></div>
-				<h4 class="mt:1r"><code>border-top:width</code></h4>
+				<h4 class="mt:1r"><code>border-top-width</code></h4>
 				<div class="btw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>btw:thick</code></div>
 				<div class="btw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>btw:medium</code></div>
 				<div class="btw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>btw:thin</code></div>
@@ -1076,7 +1076,7 @@
 				<div class="brw:thick py:.5r pr:.5r d:ib@M mr:1r mb:.5r">thick <code>brw:thick</code></div>
 				<div class="brw:medium py:.5r pr:.5r d:ib@M mr:1r mb:.5r">medium <code>brw:medium</code></div>
 				<div class="brw:thin py:.5r pr:.5r d:ib@M mr:1r mb:2r">thin <code>brw:thin</code></div>
-				<h4 class="mt:1r"><code>border-bottom:width</code></h4>
+				<h4 class="mt:1r"><code>border-bottom-width</code></h4>
 				<div class="bbw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>bbw:thick</code></div>
 				<div class="bbw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>bbw:medium</code></div>
 				<div class="bbw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>bbw:thin</code></div>
@@ -1088,7 +1088,7 @@
 				<div class="bxw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bxw:thick</code></div>
 				<div class="bxw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bxw:medium</code></div>
 				<div class="bxw:thin p:.5r px:.5r d:ib@M mr:1r mb:2r">thin <code>bxw:thin</code></div>
-				<h4 class="mt:1r"><code>border-top:width</code> + <code>border-bottom:width</code> (y-axis)</h4>
+				<h4 class="mt:1r"><code>border-top-width</code> + <code>border-bottom-width</code> (y-axis)</h4>
 				<div class="byw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>byw:thick</code></div>
 				<div class="byw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>byw:medium</code></div>
 				<div class="byw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>byw:thin</code></div>
