--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</nav>
 	<div style="font-family: 'Avenir Next', Avenir, sans-serif" class="bgc:red fs:2r fs:4r@M fs:8r@L fs:16r@XL fw:100 ff:s c:w.1 p:2r">blink!</div>
 	<header id="top" class="p:2r">
-		<h1 class="m:0 fs:2r fs:4r@M c:red c:w:h fw:700 ls:-.0625e" style="font-family: 'Avenir Next', Avenir, sansserif">blink<span class="c:b.3 fw:200 tt:u">ui</span></h1>
+		<h1 class="m:0 fs:2r fs:4r@M c:red c:w:h fw:700 ls:-.0625e" style="font-family: 'Avenir Next', Avenir, sans-serif">blink<span class="c:b.3 fw:200 tt:u">ui</span></h1>
 		<p class="m:0 lh:1.25 tt:u ls:.125e">Web and interface design in the <span class="c:red:h">blink</span> of an eye.</p>
 	</header>
 	<nav id="toc" class="mb:2r p:2r ox:s ws:nw brw:medium brw:0@XL bc:red c:b.3 fs:1.5r@XL">
